--- a/package.json
+++ b/package.json
@@ -4,19 +4,44 @@
   "description": "<h1>Advance theme functionality<h1>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
+	  "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
+	  "clean": "rm -rf build/*"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nishanmazumder/NM_THEME.git"
   },
-  "keywords": ["wordpress", "theme", "theme engine"],
+  "keywords": [
+    "wordpress",
+    "theme",
+    "theme engine"
+  ],
   "author": "Nishan M",
   "license": "MIT",
   "private": true,
-  "browserlist": ["defaults"],
+  "browserslist": [
+    "defaults"
+  ],
   "bugs": {
     "url": "https://github.com/nishanmazumder/NM_THEME/issues"
   },
-  "homepage": "https://github.com/nishanmazumder/NM_THEME#readme"
+  "homepage": "https://github.com/nishanmazumder/NM_THEME#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
+    "cssnano": "^5.0.7",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.1.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "style-loader": "^3.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
