--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prod": "cross-env NODE_ENV=production webpack --mode production --progress",
-	  "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
-	  "clean": "rm -rf build/*"
+    "dev": "cross-env NODE_ENV=development webpack --watch --mode development --progress",
+    "clean": "rm -rf build/*"
   },
   "repository": {
     "type": "git",
@@ -43,5 +43,6 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "dependencies": {}
 }
